--- a/templates/404.html
+++ b/templates/404.html
@@ -4,7 +4,7 @@
 
     <centre>
         <h1>404 Error</h1>
-        <p>Looks like you are on the wrong page...try again</p>
+        <p>you are on the wrong page...try again</p>
     </centre>
 
 {% endblock %}
