--- a/templates/add_post.html
+++ b/templates/add_post.html
@@ -1,5 +1,7 @@
 {% extends 'navbar.html'%}
 {% block content%}
+
+
 {% for message in get_flashed_messages()%}
     <div class="alert alert-success alert-dismissible fade show" role="alert">
         {{message}}
@@ -7,18 +9,19 @@
     </div>
 
 {%endfor%}
+{%if current_user.is_authenticated%}
 <h1>Add POST</h1>
 </br>
     <div class="shadow-sm p-3 mb-5 bg-body-tertiary rounded">
     <form method="POST">
+
+        <!-- {{ ckeditor.create() }} -->
         {{form.hidden_tag()}}
 
         {{form.title.label(class="form-label")}}</br>
         {{form.title(class="form-control")}}
 </br>
-        {{form.author.label(class="form-label")}}</br>
-        {{form.author(class="form-control" )}}
-        </br>
+       
         {{form.slug.label(class="form-label")}}</br>
         {{form.slug(class="form-control")}}
 </br>
@@ -29,5 +32,12 @@
         {{form.submit(class="btn btn-dark")}}
 
     </form>
+    {{ ckeditor.load() }}
+    {{ ckeditor.config(name='body') }}
     </div>
+{% else %}
+<h2>Must be logged in!</h2>
+<p>Login to access this page</p>
+<a href="{{url_for('login')}}" class="btn btn-outline-secondary">Login</a>
+{% endif %}
 {% endblock %}
