--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -15,15 +15,29 @@
       {{current_user.name|capitalize}}
     </div>
     <div class="card-body">
+      
+      <p class="card-text">
+<div class="container">
+  <div class="row">
+    <div class="col-8">
       <h5 class="card-title">Welcome to your user Dashboard</h5>
-      <p class="card-text"><strong>Name:</strong>{{current_user.name|capitalize}}</br>
+        <strong>Name:</strong>{{current_user.name|capitalize}}</br>
         <strong>Username</strong>{{current_user.username}}</br>
         <strong>User Id:</strong>{{current_user.id}}</br>
         <strong>Email:</strong>{{current_user.email}}</br>
         <strong>Date joined:</strong>{{current_user.date_added}}</br></p>
-      <a href="{{url_for('logout')}}" class="btn btn-secondary btn-sm" >Logout</a>
+      <a href="{{url_for('logout')}}" class="btn btn-outline-secondary btn-sm" >Logout</a>
+      <a href="{{url_for('update',id=current_user.id)}}" class="btn btn-outline-success btn-sm" >Update</a>
+      <a href="{{url_for('delete_user',id=current_user.id)}}" class="btn btn-outline-danger btn-sm">Delete</a>
+    </div>   
+      <div class="col-4">
+      <img src="{{url_for('static',filename='images/default_profile_pic.png')}}" align="right" width="200">
     </div>
   </div>
+</div>
+    </div>
+</div>
+
 
   
 
