--- a/templates/post.html
+++ b/templates/post.html
@@ -14,11 +14,12 @@
     <h2> {{post.title|capitalize}}</h2></br>
   <small>  By:  {{post.author|capitalize}}</br>
          {{post.date_posted}}</br></small></br>
-        {{post.content}}</br></br>
+        {{post.content|safe}}</br></br>
         </br>
     </div>
-    <a  href="{{url_for('edit_post',id=post.id)}}" class="btn btn-secondary">Edit Post</a>
-    <a  href="{{url_for('posts')}}" class="btn btn-secondary">Back to Blog</a>
-    <a  href="{{url_for('delete_post',id=post.id)}}" class="btn btn-danger">Delete Post</a>
-
+    <a  href="{{url_for('posts')}}" class="btn btn-outline-secondary">Back to Blog</a>
+    {%if post.poster_id==current_user.id%}    
+        <a  href="{{url_for('edit_post',id=post.id)}}" class="btn btn-outline-secondary">Edit Post</a>
+        <a  href="{{url_for('delete_post',id=post.id)}}" class="btn btn-outline-danger">Delete Post</a>
+    {% endif %}
 {% endblock %}
