--- a/templates/posts.html
+++ b/templates/posts.html
@@ -13,13 +13,16 @@
 {% for post in posts%}
 <div class="shadow-sm p-3 mb-5 bg-body-tertiary rounded">
     <h2> {{post.title|capitalize}}</h2></br>
-  <small>  By:  {{post.author|capitalize}}</br>
+  <small>  By:  {{post.poster.name|capitalize}}</br>
          {{post.date_posted}}</br></small></br>
-        {{post.content}}</br></br>
+        {{post.content|safe}}</br></br>
         </br>
         <a href="{{url_for('post',id=post.id)}}"     class="btn btn-secondary">View Post</a>
-        <a href="{{url_for('edit_post',id=post.id)}}"     class="btn btn-secondary">Edit Post</a>
-        <a href="{{url_for('delete_post',id=post.id)}}"     class="btn btn-danger">Delete Post</a>
-    </div>
+        {%if post.poster_id==current_user.id%}
+            <a href="{{url_for('edit_post',id=post.id)}}"     class="btn btn-secondary">Edit Post</a>
+            <a href="{{url_for('delete_post',id=post.id)}}"     class="btn btn-danger">Delete Post</a>
+        {% endif %}
+   
+        </div>
 {% endfor %}
 {% endblock %}
